# Expedition-Aya-Insight

./: .envSample  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  streaming_generator.py
.github/workflows/: deploy-to-hf.yml
app/config/: settings.py
app/document_processing/: extractors.py
app/document_processor/: processor.py
app/embedding/: __init__.py  generator.py
app/pdf_ocr/: document_processor.py  processor.py  readme.md
app/retrieval/: vector_store.py
app/summarization/: output.py  prompts.py  summarizer.py
app/utils/: exceptions.py  logger.py  performance.py
app/vector_store/: __init__.py  document_manager.py  store.py
samples/demo/: sample_pdfs
summaries/: 2004.07180v4.pdf.md  2004.14900v1.pdf.md  2005.11401v4.pdf.md  2106.13822v1.pdf.md  2305.06983v2.pdf.md  2406.13715v1.pdf.md  2410.02525v4.pdf.md  2410.04087v1.pdf.md  2412.15246v1.pdf.md
