[project]
name = "aya-insight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cohere>=5.15.0",
    "faiss-cpu>=1.11.0",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.3",
    "langchain-cohere>=0.4.4",
    "langchain-community>=0.3.23",
    "pypdf>=5.4.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.0",
]
